<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#707090"
    android:padding="40dp"
    tools:context=".MainActivity">

    <View
        android:id="@+id/central_line"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/tv"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:gravity="end"
        android:text="@string/_0"
        android:textColor="@color/white"
        android:textSize="40sp" />

    <View
        android:id="@+id/white_line"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_above="@id/btn_c"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/light_purple" />

    <Button
        android:id="@+id/btn_c"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="60dp"
        android:layout_height="63dp"
        android:layout_above="@id/btn_7"
        android:layout_marginStart="3dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="3dp"
        android:layout_toStartOf="@id/btn_par"
        android:backgroundTint="@color/light_purple"
        android:gravity="center"
        android:text="@string/c"
        android:textColor="#FF915A"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_par"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="60dp"
        android:layout_height="63dp"
        android:layout_alignTop="@id/btn_c"
        android:layout_marginStart="3dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="3dp"
        android:layout_toStartOf="@id/central_line"
        android:backgroundTint="@color/light_purple"
        android:gravity="center"
        android:text="@string/parentheses"
        android:textColor="@color/light_blue"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btn_mod"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="60dp"
        android:layout_height="63dp"
        android:layout_alignTop="@id/btn_c"
        android:layout_margin="3dp"
        android:layout_toEndOf="@id/btn_par"
        android:backgroundTint="@color/light_purple"
        android:gravity="center"
        android:text="@string/mod"
        android:textColor="@color/light_blue"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_div"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="60dp"
        android:layout_height="63dp"
        android:layout_alignTop="@id/btn_c"
        android:layout_margin="3dp"
        android:layout_toEndOf="@id/btn_mod"
        android:backgroundTint="@color/light_purple"
        android:gravity="center"
        android:text="@string/div"
        android:textColor="@color/light_blue"
        android:textSize="20sp" />


    <Button
        android:id="@+id/btn_7"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="60dp"
        android:layout_height="63dp"
        android:layout_above="@id/btn_4"
        android:layout_alignStart="@id/btn_backspace"
        android:layout_marginStart="3dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="3dp"
        android:backgroundTint="@color/light_purple"
        android:gravity="center"
        android:text="@string/_7"
        android:textColor="@color/dark_purple"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_8"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="60dp"
        android:layout_height="63dp"
        android:layout_alignTop="@id/btn_7"
        android:layout_margin="3dp"
        android:layout_toEndOf="@id/btn_7"
        android:backgroundTint="@color/light_purple"
        android:gravity="center"
        android:text="@string/_8"
        android:textColor="@color/dark_purple"
        android:textSize="20sp" />


    <Button
        android:id="@+id/btn_9"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="60dp"
        android:layout_height="63dp"
        android:layout_alignTop="@id/btn_7"
        android:layout_margin="3dp"
        android:layout_toEndOf="@id/btn_8"
        android:backgroundTint="@color/light_purple"
        android:gravity="center"
        android:text="@string/_9"
        android:textColor="@color/dark_purple"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_x"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="60dp"
        android:layout_height="63dp"
        android:layout_alignTop="@id/btn_7"
        android:layout_marginStart="3dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="3dp"
        android:layout_toEndOf="@id/btn_9"
        android:backgroundTint="@color/light_purple"
        android:gravity="center"
        android:text="@string/x"
        android:textColor="@color/light_blue"
        android:textSize="20sp" />


    <Button
        android:id="@+id/btn_4"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="60dp"
        android:layout_height="63dp"
        android:layout_above="@id/btn_1"
        android:layout_alignStart="@id/btn_backspace"
        android:layout_marginStart="3dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="3dp"
        android:backgroundTint="@color/light_purple"
        android:gravity="center"
        android:text="@string/_4"
        android:textColor="@color/dark_purple"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_5"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="60dp"
        android:layout_height="63dp"
        android:layout_alignTop="@+id/btn_4"
        android:layout_margin="3dp"
        android:layout_toEndOf="@id/btn_4"
        android:backgroundTint="@color/light_purple"
        android:gravity="center"
        android:text="@string/_5"
        android:textColor="@color/dark_purple"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_6"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="60dp"
        android:layout_height="63dp"
        android:layout_alignTop="@+id/btn_4"
        android:layout_margin="3dp"
        android:layout_toEndOf="@id/btn_5"
        android:backgroundTint="@color/light_purple"
        android:gravity="center"
        android:text="@string/_6"
        android:textColor="@color/dark_purple"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_sub"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="60dp"
        android:layout_height="63dp"
        android:layout_alignTop="@+id/btn_4"
        android:layout_margin="3dp"
        android:layout_toEndOf="@id/btn_6"
        android:backgroundTint="@color/light_purple"
        android:gravity="center"
        android:text="@string/sub"
        android:textColor="@color/light_blue"
        android:textSize="20sp" />


    <Button
        android:id="@+id/btn_1"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="60dp"
        android:layout_height="63dp"
        android:layout_above="@id/btn_backspace"
        android:layout_alignStart="@id/btn_backspace"
        android:layout_marginStart="3dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="3dp"
        android:backgroundTint="@color/light_purple"
        android:gravity="center"
        android:text="@string/_1"
        android:textColor="@color/dark_purple"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_2"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="60dp"
        android:layout_height="63dp"
        android:layout_alignTop="@id/btn_1"
        android:layout_margin="3dp"
        android:layout_toEndOf="@id/btn_1"
        android:backgroundTint="@color/light_purple"
        android:gravity="center"
        android:text="@string/_2"
        android:textColor="@color/dark_purple"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_3"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="60dp"
        android:layout_height="63dp"
        android:layout_alignTop="@id/btn_1"
        android:layout_margin="3dp"
        android:layout_toEndOf="@id/btn_2"
        android:backgroundTint="@color/light_purple"
        android:gravity="center"
        android:text="@string/_3"
        android:textColor="@color/dark_purple"
        android:textSize="20sp" />


    <Button
        android:id="@+id/btn_add"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="60dp"
        android:layout_height="63dp"
        android:layout_alignTop="@id/btn_1"
        android:layout_margin="3dp"
        android:layout_toEndOf="@id/btn_3"
        android:backgroundTint="@color/light_purple"
        android:gravity="center"
        android:text="@string/add"
        android:textColor="@color/light_blue"
        android:textSize="20sp" />


    <Button
        android:id="@+id/btn_backspace"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="60dp"
        android:layout_height="63dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="3dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="3dp"
        android:layout_toStartOf="@id/btn_0"
        android:backgroundTint="@color/light_purple"
        android:gravity="center"
        android:text="@string/backspace"
        android:textColor="@color/dark_purple"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_0"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="60dp"
        android:layout_height="63dp"
        android:layout_alignTop="@id/btn_backspace"
        android:layout_marginStart="3dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="3dp"
        android:layout_toStartOf="@id/central_line"
        android:backgroundTint="@color/light_purple"
        android:gravity="center"
        android:text="@string/_0"
        android:textColor="@color/dark_purple"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_point"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="60dp"
        android:layout_height="63dp"
        android:layout_alignTop="@id/btn_backspace"
        android:layout_margin="3dp"
        android:layout_toEndOf="@id/btn_0"
        android:backgroundTint="@color/light_purple"
        android:gravity="center"
        android:text="@string/point"
        android:textColor="@color/dark_purple"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_equal"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="60dp"
        android:layout_height="63dp"
        android:layout_alignTop="@id/btn_backspace"
        android:layout_margin="3dp"
        android:layout_toEndOf="@id/btn_point"
        android:backgroundTint="@color/light_blue"
        android:gravity="center"
        android:text="@string/equal"
        android:textColor="@color/light_purple"
        android:textSize="20sp" />

</RelativeLayout>